--- a/simplified.lyx
+++ b/simplified.lyx
@@ -156,8 +156,29 @@ Due to the stated initial condition and the neutrality of the evolution
 \end_layout
 
 \begin_layout Standard
+We proceed by firstly introducing the notation
+\begin_inset Formula 
+\[
+|\vec{N}_{Y}|_{h}\equiv\sum_{s}\delta_{H_{s,0},h}N_{Y}^{(s)}
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
 Consider firstly that the probability can be marginalised in the following
- way
+ way:
+\begin_inset Formula 
+\begin{eqnarray}
+P(N_{X},\vec{n}_{Y},\vec{n}_{V},t) & = & \sum_{|\vec{N}_{Y}|_{0}=n_{Y}^{(0)}}\sum_{|\vec{N}_{V}|=n_{V}^{(0)}}\ldots\sum_{|\vec{N}_{Y}|_{h}=n_{Y}^{(h)}}\sum_{|\vec{N}_{V}|_{h}=n_{V}^{(h)}}\nonumber \\
+ &  & \ldots\sum_{|\vec{N}_{Y}|_{h}=n_{Y}^{(L)}}\sum_{|\vec{N}_{V}|_{h}=n_{V}^{(L)}}P(N_{X},\vec{N}_{Y},\vec{N}_{V},t)
+\end{eqnarray}
+
+\end_inset
+
+
 \end_layout
 
 \end_body
