--- a/simplified.lyx
+++ b/simplified.lyx
@@ -156,55 +156,62 @@ Due to the stated initial condition and the neutrality of the evolution
 \end_layout
 
 \begin_layout Standard
-We proceed by firstly introducing the notation
-\begin_inset Formula 
-\begin{equation}
-|\vec{N}_{Y}|_{h}\equiv\sum_{s}\delta_{H_{s,0},h}N_{Y}^{(s)},
-\end{equation}
-
+We proceed by introducing the vector 
+\begin_inset Formula $\vec{R}_{h}(\vec{N})$
 \end_inset
 
-by which we mean the total number of cells containing provirus differing
- from the inoculation sequence 
-\begin_inset Formula $0$
+ whose elements consist of those elements of 
+\begin_inset Formula $\vec{N}$
 \end_inset
 
- at exactly 
-\begin_inset Formula $h$
+ corresponding to sequences 
+\begin_inset Formula $s$
 \end_inset
 
- loci.
- Furthermore, we define the set 
-\begin_inset Formula $R(\vec{N}_{Y},h)=\{N_{Y}^{(s)}:H_{s,0}=h\}$
-\end_inset
-
- composed of those elements of 
-\begin_inset Formula $\vec{N}_{Y}$
-\end_inset
-
- corresponding to haplotype populations possessing 
-\begin_inset Formula $h$
-\end_inset
-
- mutations.
- Note that 
-\begin_inset Formula $R(\vec{N}_{Y},h)\cap R(\vec{N}_{Y},h')=\emptyset$
+ satisfying 
+\begin_inset Formula $H_{s,0}=h$
 \end_inset
 
 .
-\end_layout
+ Then, using the notation 
+\begin_inset Formula $|\vec{N}|=\sum_{s}N^{(s)}$
+\end_inset
 
-\begin_layout Standard
-The probability can then be marginalised in the following way:
+, we define the following marginalised probability distribution:
 \begin_inset Formula 
 \begin{eqnarray}
-P(N_{X},\vec{n}_{Y},\vec{n}_{V},t) & = & \sum_{|\vec{N}_{Y}|_{0}=n_{Y}^{(0)}}\sum_{|\vec{N}_{V}|_{0}=n_{V}^{(0)}}\ldots\sum_{|\vec{N}_{Y}|_{h}=n_{Y}^{(h)}}\sum_{|\vec{N}_{V}|_{h}=n_{V}^{(h)}}\nonumber \\
- &  & \ldots\sum_{|\vec{N}_{Y}|_{h}=n_{Y}^{(L)}}\sum_{|\vec{N}_{V}|_{h}=n_{V}^{(L)}}P(N_{X},\vec{N}_{Y},\vec{N}_{V},t)
+P(N_{X},\vec{n}_{Y},\vec{n}_{V},t) & = & \sum_{|\vec{R}_{0}(\vec{N}_{Y})|=n_{Y}^{(0)}}\sum_{|\vec{R}_{0}(\vec{N}_{V})|=n_{V}^{(0)}}\ldots\sum_{|\vec{R}_{h}(\vec{N}_{Y})|=n_{Y}^{(h)}}\sum_{|\vec{R}_{h}(\vec{N}_{V})|=n_{V}^{(h)}}\nonumber \\
+ &  & \ldots\sum_{|\vec{R}_{L}(\vec{N}_{Y})|=n_{Y}^{(L)}}\sum_{|\vec{R}_{L}(\vec{N}_{V})|=n_{V}^{(L)}}P(N_{X,}\vec{N}_{Y},\vec{N}_{V},t).
 \end{eqnarray}
 
 \end_inset
 
 
+\end_layout
+
+\begin_layout Standard
+The symmetry resulting from the initial condition and the lack of selection
+ results in the following equality:
+\begin_inset Formula 
+\begin{equation}
+P(N_{X},\hat{\pi}_{h}\vec{N}_{Y},\vec{N}_{V},t)=P(N_{X},\vec{N}_{Y},\hat{\pi}_{h}\vec{N}_{V},t)=P(N_{X},\vec{N}_{Y},\vec{N}_{V},t),
+\end{equation}
+
+\end_inset
+
+where 
+\begin_inset Formula $\hat{\pi}_{h}$
+\end_inset
+
+ is an operator which permutes elements of 
+\begin_inset Formula $\vec{N}$
+\end_inset
+
+ corresponding to sequences satisfying 
+\begin_inset Formula $H_{s,0}=h$
+\end_inset
+
+.
 \end_layout
 
 \end_body
