--- a/estimate.lyx
+++ b/estimate.lyx
@@ -114,8 +114,8 @@ Taking into account the fact that the symmetry of the problem requires
 \begin_inset Formula 
 \begin{eqnarray}
 \dot{x} & = & \lambda-dx-\beta x\sum_{h=0}^{L}V(h)\nonumber \\
-\dot{Y}(h) & = & (1-\mu)\beta xV(h)+\frac{\mu}{3L}\beta x\big(g(h-1|h)V(h-1)\\
- &  & +g(h|h)V(h)+g(h+1|h)V(h+1)\big)\nonumber \\
+\dot{Y}(h) & = & (1-\mu)\beta xV(h)+\frac{\mu}{3L}\beta x\big(g(h-1|h)\frac{g(h)}{g(h-1)}V(h-1)\\
+ &  & +g(h|h)V(h)+g(h+1|h)\frac{g(h)}{g(h-1)}V(h+1)\big)\nonumber \\
  &  & -aY(h)\nonumber \\
 \dot{V}(h) & = & kY(h)-\beta xV(h)-uV(h).
 \end{eqnarray}
@@ -123,6 +123,10 @@ Taking into account the fact that the symmetry of the problem requires
 \end_inset
 
 Here 
+\begin_inset Formula $g(h)=|S_{h}|$
+\end_inset
+
+, while 
 \begin_inset Formula $g(h'|h)$
 \end_inset
 
